# supertable

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile.https  DOCKERHUB.md  Dockerfile  GITHUB.md  INSTALL  LICENSE  Makefile  PUBLISH  PUBLISH_MANUAL  PYPI.md  README.md  docker-compose.yml  docker-entrypoint.sh  docker-push.sh  entrypoint.sh  publish.sh  push-pypi.sh  pyproject.toml  requirements-docker.txt  requirements.txt  setup.py  vault_notes.md
_features_/: _request_v1.md  documentation.md  execute_sql_documentation.md  supertable_api_endpoints.md  supertable_dependency_model.md  supertable_env_map.md  supertable_locking_documentation.md  supertable_mcp.md  supertable_meta_reader.md  supertable_monitoring_subsystem.md  supertable_storage_layer.md  tables_feature_documentation.md
certs/: caddy-root-ca.crt  cert.pem  key.pem
docs/: 00_index.md  01_platform_overview.md  02_configuration.md  03_data_model.md  03_storage.md  04_redis_catalog.md  04_storage.md  05_data_model.md  05_redis_catalog.md  06_data_writer.md  07_ingestion.md  07_query_engine.md  08_ingestion.md  08_locking.md  09_query_engine.md  09_rbac.md  10_audit_log.md  10_data_reader.md  11_rbac.md  11_rest_api.md  12_audit.md  12_mcp.md  13_mirroring.md  13_monitoring.md  14_data_quality.md  14_monitoring.md  15_mirroring.md  15_python_sdk.md  16_locking.md  16_redis_layout.md  17_gc.md  CLONE_ARCHITECTURE.md  SHARING_EXTENSION_DESIGN.md  TODO.md  supertable_data_reader.md  supertable_history_cleaner.md  supertable_mirroring_analysis.md  supertable_query_engine.md
examples/: 0.1. example_controller.py  1.1.1. create_super_table.py  1.1.2. enable_mirroring_formats.py  1.2. create_roles.py  1.3. create_users.py  2.1. write_dummy_data.py  2.2. write_single_data.py  2.3. write_staging.py  2.3.1. write_staging.py  2.3.2. create_pipe.py  2.4. write_stats_parallel.py  2.4. write_stats_simple.py  2.4.1. write_monitoring_simple.py  2.4.2. write_monitoring_parallel.py  3.1. read_data_error.py  3.2.1. read_super_data_ok.py  3.2.2. read_table_data_ok.py  3.3. read_meta.py  3.4. read_staging.py  3.5. read_query_plans.py  3.5. read_query_stats.py  3.5.1. read_query_plans.py  3.5.2. read_write_stats.py  3.6. read_roles.py  3.6. read_user.py  3.7.1. estimate_read.py  3.7.2. estimate_files.py  4.1.1. clean_obsolete_files.py  4.1.2.task_obsolete_files.py  4.1.3. delete_pipe.py  5.1. delete_table.py  5.2. delete_super_table.py  __test__.py  check_filter_builder.py  check_locking.py  defaults.py  dummy_data.py  example_controller.py  generate_writing_parallel.py  generate_writing_simple.py  (+7 more)
generator/: generate.py  sample_generator.py  sample_schemas.py  synthetic_webshop_data_core.py  synthetic_webshop_data_generator.py  synthetic_webshop_data_loader.py  synthetic_webshop_defaults.py  synthetic_webshop_topup.py
prompts/: _security-assessment-plan-v2.md  _security_check.md  documentation_generation_prompt.md  engineering_prompt.md  (+3 more)
(+715 files in other folders)
