[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supertable"
version = "1.2.0"
description = "SuperTable revolutionizes data management by integrating multiple basic tables into a single, cohesive framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Super Table Public Use License (STPUL) v1.0" }
authors = [
    { name = "Levente Kupas", email = "lkupas@kladnasoft.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

# Core deps remain specified via setup.py (install_requires).
# Cloud SDKs are OPTIONAL and moved to extras below.
[project.optional-dependencies]
s3    = ["boto3>=1.34"]
minio = ["minio>=7.2"]
azure = ["azure-storage-blob>=12.24"]
# add gcs later if/when a backend is added: ["google-cloud-storage>=3.1.0"]
all   = ["supertable[s3,minio,azure]"]

[project.urls]
Homepage = "https://github.com/kladnasoft/supertable"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["supertable", "supertable.*"]
