[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supertable"
version = "2.1.0"
description = "SuperTable — versioned data lake library for SQL analytics on Parquet + Redis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Super Table Public Use License (STPUL) v1.0" }
authors = [{ name = "Levente Kupas", email = "lkupas@kladnasoft.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

# Read runtime deps from requirements.txt to keep a single source of truth
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
# Storage backends (pick what you deploy on)
s3    = ["boto3>=1.34,<2.0"]
minio = ["minio>=7.2,<8.0"]
azure = ["azure-storage-blob>=12.26.0"]
gcp   = ["google-cloud-storage>=3.1.0"]
all-cloud = ["supertable[s3,minio,azure,gcp]"]

# Everything
all = ["supertable[all-cloud]"]

[project.urls]
Homepage = "https://github.com/kladnasoft/supertable"

[project.scripts]
supertable-demo-quickstart       = "supertable.demo.quickstart.controller:main"
supertable-demo-webshop-generate = "supertable.demo.webshop.generate:main"
supertable-demo-webshop-load     = "supertable.demo.webshop.load:main"
supertable-demo-webshop-topup    = "supertable.demo.webshop.topup:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["supertable", "supertable.*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
